# iot-lab-server-dash

./: .env.example  .gitignore  docker-compose.yml
config/: sync-config.toml
lab-ctl/: Cargo.toml
lab-ctl/.sqlx/: query-4162001039ec2c7d3dd13fbef3673b57fbd82e46105a7f9ab288264ef1120377.json  query-44553a5a2e592a78411b42ce21cfc4d369ad7c90fea3cd0ef62213da585fc415.json  query-498b75c94d24496256d822b2c07422fdd6f678c06b1916241d5c9579fefed315.json  query-5866c28def15ab3f9b219be6047f3ebbd659d81bfd2ead065e057d1d13bba113.json  query-666d0b7d1617991fba2c5c9fea999bd403ff551151682cd1de29dd78e9bb38fc.json  query-6c629f0eb2cfb70869d6f3ffce02222326c97cfb6a92c816a1e77c4a6f75ac23.json  query-8685a1b8492f56056ba70671a3fd2f9b66b43fb3cea0238a3af9290539465b7e.json  query-9f504f44fa67aeb8ac4e922732839365a17ad924885ed9a9f33d15d7ef488ea1.json  query-a3c2b361da7f99754f509c7be01d9bb6f0d329495e8e325b7ec153634d09f207.json  query-b13d50158cbabb61ada0dbeb56deab03bda8a1d1f1b1967c9a1bc8c7f2546ea5.json  query-b9e07dc3cccb59efc74e6987f560ea1c31e67d01d8fdf5d58c9986c649936462.json  query-c749b5e48a663b8628ea9906a91944c1ff892f38da5dd4bc32a3a88e243dadbd.json  query-e3ab3c2457693c59747753c0efe379e125c62b479ecd32bd0a3b19a4e6a5ef01.json  query-eff63dddc757eb87bcd79ae266028f3ea11aa5c436b2a2f71ce7713a54d6d238.json  query-fc32417ad1f4d367321b3d4d63ea0f70fa1a02dbb1f551c2b09722a466e1cc60.json
lab-ctl/src/: config.rs  db.rs  main.rs
lab-ctl/src/routes/: backup.rs  containers.rs  db_info.rs  health.rs  mod.rs  sync.rs
lab-ctl/src/sync/: audit.rs  daemon.rs  mod.rs  rules.rs
postgres/: Dockerfile  (+1 more)
(+5 files in other folders)
